Tank class created
Next, you want to create a Map class in which the terrain and tank are contained and with a camera property for display in the sketch.

--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
     <meta name="keywords" content="mini-game, AI, tanks, p5.js, TensorFlow">
 </head>
 <body>
-    <h1>Tanks Lite</h1>
-    <nav>
-        <div>
-            <input type="radio" name="window-select" id="select-control-test" value="select-control-test" checked>
-            <label for="select-control-test">Control test</label>
-        </div>
-        <div>
-            <input type="radio" name="window-select" id="select-display-1" value="select-display-1">
-            <label for="select-display-1">Display 1</label>
-        </div>
-        <div>
-            <input type="radio" name="window-select" id="select-display-2" value="select-display-2">
-            <label for="select-display-2">Display 2</label>
-        </div>
-    </nav>
-    <div class="display" id="diaplay-control-test"></div>
-    <div class="display" id="diaplay-1"></div>
-    <div class="display" id="diaplay-2"></div>
+    <main>
+        <h1>Tanks Lite</h1>
+        <nav>
+            <div>
+                <input type="radio" name="window-select" id="select-control-test" value="select-control-test" checked>
+                <label for="select-control-test">Control test</label>
+            </div>
+            <div>
+                <input type="radio" name="window-select" id="select-display-1" value="select-display-1">
+                <label for="select-display-1">Display 1</label>
+            </div>
+            <div>
+                <input type="radio" name="window-select" id="select-display-2" value="select-display-2">
+                <label for="select-display-2">Display 2</label>
+            </div>
+        </nav>
+        <div class="display" id="diaplay-control-test"></div>
+        <div class="display" id="diaplay-1"></div>
+        <div class="display" id="diaplay-2"></div>
+    </main>
 </body>
 </html>
