--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="p5.min.js"></script>
     <script src="planck.min.js"></script>
-    <script src="p5play.js"></script> <!-- Remember to test if you can also use p5play.min.js-->
+    <script src="p5play.min.js"></script>
     <script src="events.js" defer></script>
-    <!--<script src="classes.js"></script>-->
+    <script src="classes.js"></script>
     <script src="sketch-control-test.js"></script>
     <link rel="stylesheet" href="style.css">
     
