Typescript fully implemented
Next, you should look into joints and blue in p5play

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="planck.min.js"></script>
     <script src="p5play.min.js"></script>
     <script src="dist/events.js" defer></script>
-    <script src="classes.js"></script>
+    <script src="dist/classes.js"></script>
 
     <script src="dist/sketch-control-test.js"></script>
     <link rel="stylesheet" href="style.css">
