Restore tsconfig.tsbuildinfo

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <script src="p5.min.js"></script>
     <script src="planck.min.js"></script>
     <script src="p5play.min.js"></script>
-    <script src="dist/events.js" defer></script>
-    <script src="dist/classes.js"></script>
 
-    <script src="dist/sketch-control-test.js"></script>
     <link rel="stylesheet" href="style.css">
     
     <title>Tanks Lite</title>
@@ -18,6 +15,10 @@
     <meta name="keywords" content="mini-game, AI, tanks, p5.js, TensorFlow">
 </head>
 <body>
+    <script src="dist/events.js" defer></script>
+    <script src="dist/classes.js" defer></script>
+
+    <script src="dist/sketch-control-test.js" defer></script>
     <main>
         <h1>Tanks Lite</h1>
         <nav>
