--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="p5.min.js"></script>
     <script src="planck.min.js"></script>
-    <script src="p5play.min.js"></script>
+    <script src="p5play.js"></script>
 
     <link rel="stylesheet" href="style.css">
     
