Beginning instance mode
Currently I can't access GlueJoint in my Tank class.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="dist/events.js" defer></script>
     <script src="dist/classes.js" defer></script>
 
-    <script src="dist/sketch-control-test.js" defer></script>
+    <script src="dist/sketch-control-test.js"></script>
     <main>
         <h1>Tanks Lite</h1>
         <nav>
