Added import map to help bare specifiers
I have solved the bug with importing p5 differently in Typescript and in JS adding an importmap to index.html. This will be good to know in the future.
Now, I have faced a new bug "ambiguous indirect export"

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
     <meta name="keywords" content="mini-game, AI, tanks, p5.js, TensorFlow">
 </head>
 <body>
+    <script type="importmap">
+        {
+            "imports":
+            {
+                "p5": "/node_modules/p5/lib/p5.min.js"
+            }
+        }
+    </script>
     <script src="dist/events.js" defer></script>
     <script src="dist/classes.js" defer></script>
 
-    <script src="dist/sketch-control-test.js"></script>
+    <script type="module" src="dist/sketch-control-test.js"></script>
     <main>
         <h1>Tanks Lite</h1>
         <nav>
