--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="p5.min.js"></script>
+    <script src="/node_modules/p5/lib/p5.min.js"></script>
     <script src="planck.min.js"></script>
-    <script src="p5play.js"></script>
+    <script src="/node_modules/p5play/p5play.min.js"></script>
 
     <link rel="stylesheet" href="style.css">
     
@@ -19,12 +19,13 @@
         {
             "imports":
             {
-                "p5": "/node_modules/p5/lib/p5.min.js"
+                "p5": "/node_modules/p5/lib/p5.min.js",
+                "p5play": "/node_modules/p5play/p5play.js"
             }
         }
     </script>
     <script src="dist/events.js" defer></script>
-    <script src="dist/classes.js" defer></script>
+    <!-- <script src="dist/classes.js" defer></script> -->
 
     <script type="module" src="dist/sketch-control-test.js"></script>
     <main>
