--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
     
     <title>Tanks Lite</title>
+    <link rel="icon" type="image/x-icon" href="/favicon/favicon64.ico">
     <meta name="author" content="Sif Høg">
     <meta name="description" content="Tanks Lite is a 2D tank game developed using p5.js, created as a platform to experiment with artificial intelligence algorithms.">
     <meta name="keywords" content="mini-game, AI, tanks, p5.js, TensorFlow">
