Created nested Tank class of p5Tanks

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             "imports":
             {
                 "p5": "/node_modules/p5/lib/p5.min.js",
-                "p5play": "/node_modules/p5play/p5play.js"
+                "p5play": "/node_modules/p5play/p5play.js",
+                "classes": "/dist/classes.js"
             }
         }
     </script>
