--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/dist/tank-configs.js"></script>
     <script src="/node_modules/p5/lib/p5.js"></script>
     <script src="planck.min.js"></script>
     <script src="/node_modules/p5play/p5play.js"></script>
@@ -26,6 +27,7 @@
             }
         }
     </script>
+
     <script src="dist/events.js" defer></script>
     <!-- <script src="dist/classes.js" defer></script> -->
 
